[gd_scene load_steps=19 format=3 uid="uid://bshcmoflw3ek1"]

[ext_resource type="Script" path="res://AffectionData.gd" id="1_ed4pk"]
[ext_resource type="Texture2D" uid="uid://bwffn0bq8y4kp" path="res://assets/background.jpg" id="2_5x8cf"]
[ext_resource type="Script" path="res://ProgressBar.gd" id="3_mrnwi"]
[ext_resource type="Script" path="res://InputHandler.gd" id="3_rv7bn"]
[ext_resource type="Script" path="res://AnimationManager.gd" id="4_oly7i"]
[ext_resource type="AudioStream" uid="uid://bjfcocqww4u3f" path="res://assets/upset.mp3" id="5_pnfwi"]
[ext_resource type="Texture2D" uid="uid://1juaojeeur03" path="res://assets/zanahoria.png" id="6_kjark"]
[ext_resource type="AudioStream" uid="uid://deqd2dqmxxq1l" path="res://assets/background-music.mp3" id="6_mqf5c"]
[ext_resource type="Script" path="res://MouseEvents.gd" id="7_pd2bv"]
[ext_resource type="PackedScene" uid="uid://colxn28rhf1fg" path="res://SceneChange.tscn" id="10_gjajk"]

[sub_resource type="ViewportTexture" id="ViewportTexture_s36ff"]
viewport_path = NodePath("Character/Buny/GDCubismUserModel")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rjy1"]
size = Vector2(8720, 5920)

[sub_resource type="CircleShape2D" id="CircleShape2D_uogw3"]
radius = 39.8038

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3uok2"]
size = Vector2(411.5, 196.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d70df"]
size = Vector2(1330, 1286.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_sb01v"]
radius = 15.7525

[sub_resource type="CircleShape2D" id="CircleShape2D_gd7r2"]
radius = 21.1011

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0lnb0"]
size = Vector2(990, 990)

[node name="Room" type="Node2D"]
script = ExtResource("1_ed4pk")

[node name="Background" type="TextureRect" parent="."]
offset_left = 1.0
offset_right = 1241.0
offset_bottom = 720.0
texture = ExtResource("2_5x8cf")
expand_mode = 2

[node name="LabelPanel" type="ColorRect" parent="."]
offset_left = 10.0
offset_top = 29.0
offset_right = 256.0
offset_bottom = 174.0
color = Color(0.592157, 0.360784, 0.768627, 0.486275)

[node name="Labels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 40.0
offset_top = 38.0
offset_right = 230.0
offset_bottom = 168.0

[node name="AffectionLevel" type="Label" parent="Labels"]
layout_mode = 0
offset_left = -5.0
offset_top = 10.0
offset_right = 36.0
offset_bottom = 33.0
text = "Level"

[node name="AffectionPercentage" type="Label" parent="Labels"]
layout_mode = 0
offset_left = -5.0
offset_top = 40.0
offset_right = 66.0
offset_bottom = 63.0
text = "Affection"

[node name="Mood" type="Label" parent="Labels"]
layout_mode = 0
offset_left = -5.0
offset_top = 70.0
offset_right = 40.0
offset_bottom = 93.0
text = "Mood"

[node name="Hunger" type="Label" parent="Labels"]
layout_mode = 0
offset_left = -5.0
offset_top = 100.0
offset_right = 57.0
offset_bottom = 123.0
text = "Hunger"

[node name="ProgressBar" type="ProgressBar" parent="Labels"]
layout_mode = 0
offset_left = 77.0
offset_top = 40.0
offset_right = 211.0
offset_bottom = 67.0
script = ExtResource("3_mrnwi")

[node name="Character" type="Node2D" parent="."]
script = ExtResource("3_rv7bn")

[node name="Buny" type="Sprite2D" parent="Character"]
position = Vector2(442, 249)
scale = Vector2(0.1, 0.1)
texture = SubResource("ViewportTexture_s36ff")
centered = false
script = ExtResource("4_oly7i")

[node name="GDCubismUserModel" type="GDCubismUserModel" parent="Character/Buny"]
assets = "res://addons/gd_cubism/buny123/bny123.model3.json"
anim_loop = true
anim_loop_fade_in = true
anim_expression = "sadcry"
anim_motion = "Tears_0"
ParamAngleX = 0.0
ParamAngleY = 0.0
ParamEyeBallX = 0.0
ParamEyeBallY = 0.0
Eyes_mov = 0.260001
ParamEyeLOpen = 1.0
ParamMouthForm = 0.0259588
ParamMouthOpenY = 5.69147e-14
pupilas = 0.0
HeadLilt = 0.5
bite_head_par = 0.377714
upset = 0.0
sad = 0.6
cry = 1.0
happy = 0.0
super_happy = 0.0
loopcry1 = 0.519177
loopcry2 = 1.0
hand123 = 0.0
hand = 0.5
hearts_mov = 0.0
heartsmov2 = 1.0
hearts_opacity = 0.0
Hearts = 0.0
ArmUpset = 0.0
hand_pet_facel1 = 0.0
Leye = 0.0
hand2X = 0.0
hand2Y = 1.0
handfaceop = 0.0
earRtouch = 0.5
earRtouchop = 0.0
earLtouch = 0.5
earLtouchop = 0.0
facetouchL = 0.5
facetouchopL = 0.0
ParamBreath = 0.37694
torso_mov = 0.55713
body2 = 0.0
main_arms = 0.0
ParamBodyAngleX = -1.0476
armRotationX = 0.5
amrsupset = 0.0
ParamAngleZ = 0.0
Carrot_opacity = 0.0
Carrot_bites = 0.7
armcarrotL = 0.400038
CarrotY = 0.6
happy_body = 0.5
notes1 = 0.5
notes_opacity = 0.0
ParamHairFront = 0.0
ParamHairSide = -0.227132
ParamHairBack = -0.154994
ParamBrowLX = 0.0
ParamBrowRX = 0.0
ParamEyeLSmile = 0.0
ParamBodyAngleY = 0.0
ParamEyeROpen = 1.0
ParamBrowLY = 0.0
ParamEyeRSmile = 0.0
ParamBrowRY = 0.0
ParamBrowLAngle = 0.0
ParamBrowRAngle = 0.0
ParamBrowLForm = 0.0
ParamBrowRForm = 0.0
ParamCheek = 0.0
ParamBodyAngleZ = 0.0
Folder6 = 1.0
Part5 = 1.0
Folder3 = 1.0
Part6 = 1.0
mouth = 1.0
Part = 1.0
Folder1 = 1.0
Part10 = 1.0
Folder2 = 1.0
Folder4 = 1.0
mouthclose = 1.0
Part7 = 1.0
Part8 = 1.0
Folder5 = 1.0
armsupset = 1.0
Part3 = 1.0
carrotarms = 1.0
arm123 = 1.0
brazos = 1.0
disable_3d = true
transparent_bg = true
gui_disable_input = true
size = Vector2i(4096, 4096)
render_target_update_mode = 4

[node name="GDCubismEffectTargetPoint" type="GDCubismEffectTargetPoint" parent="Character/Buny/GDCubismUserModel"]

[node name="ModelArea" type="Area2D" parent="Character/Buny"]
position = Vector2(2180, 2310)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Buny/ModelArea"]
position = Vector2(310, -760)
shape = SubResource("RectangleShape2D_1rjy1")

[node name="HeadArea" type="Area2D" parent="Character/Buny"]
position = Vector2(1940, 1320)
scale = Vector2(20, 20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Buny/HeadArea"]
position = Vector2(1.1871, 13.139)
rotation = -0.367201
scale = Vector2(0.894355, 0.912229)
shape = SubResource("CircleShape2D_uogw3")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Character/Buny/HeadArea"]
visible = false
polygon = PackedVector2Array(-29.5, 6.5, -27.5, -4.5, -19.5, -12, -0.5, -19, 12.5, -18.5, 29.5, -6, 32, 5, 31.5, 19.5, 28, 21.5, 10.5, 16, -3, 25, -15, 21.5, -18, 25.5, -25, 30)

[node name="ChestArea" type="Area2D" parent="Character/Buny"]
position = Vector2(2170, 2520)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Buny/ChestArea"]
position = Vector2(4.25, 10)
shape = SubResource("RectangleShape2D_3uok2")
debug_color = Color(0.982158, 0, 0.364696, 0.42)

[node name="FeedingHeadArea" type="Area2D" parent="Character/Buny"]
position = Vector2(1950, 1610)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Buny/FeedingHeadArea"]
position = Vector2(15, -23.125)
shape = SubResource("RectangleShape2D_d70df")
debug_color = Color(0.511476, 0.57754, 1.92523e-07, 0.42)

[node name="LeftCheek" type="Area2D" parent="Character/Buny"]
position = Vector2(1750, 2000)
scale = Vector2(12.8, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Buny/LeftCheek"]
shape = SubResource("CircleShape2D_sb01v")

[node name="RightCheek" type="Area2D" parent="Character/Buny"]
position = Vector2(2200, 1920)
scale = Vector2(0.95, 0.7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Buny/RightCheek"]
scale = Vector2(10, 10)
shape = SubResource("CircleShape2D_gd7r2")

[node name="LeftEar" type="Area2D" parent="Character/Buny"]
position = Vector2(960, 1180)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Character/Buny/LeftEar"]
position = Vector2(-930, -1000)
polygon = PackedVector2Array(360, 1100, 690, 820, 1120, 640, 1360, 710, 1220, 1090, 1060, 1080, 840, 1340, 420, 1370)

[node name="RightEar" type="Area2D" parent="Character/Buny"]
position = Vector2(2020, 610)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Character/Buny/RightEar"]
scale = Vector2(50, 50)
polygon = PackedVector2Array(-4.2, 3.6, -5.8, 1.2, -8.39999, -3.8, -11.8, -9, -10.4, -12, -6.6, -13, -2.2, -10.6, 1.40001, -7, 4.2, -2.2, 4.60001, 2.6)

[node name="UpsetSound" type="AudioStreamPlayer" parent="Character/Buny"]
stream = ExtResource("5_pnfwi")
volume_db = -45.0

[node name="Food" type="Node2D" parent="."]

[node name="Carrot" type="Sprite2D" parent="Food"]
position = Vector2(99, 627)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_kjark")

[node name="CarrotArea" type="Area2D" parent="Food/Carrot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Food/Carrot/CarrotArea"]
position = Vector2(24.9998, 24.9995)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_0lnb0")
debug_color = Color(0.509804, 0.576471, 0, 0.419608)

[node name="Scripts" type="Node2D" parent="."]

[node name="MouseEvents" type="Node2D" parent="Scripts"]
script = ExtResource("7_pd2bv")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_mqf5c")
volume_db = -40.0
pitch_scale = 0.9
autoplay = true

[node name="SceneChange" parent="." instance=ExtResource("10_gjajk")]
visible = false
